friends to products

--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -31,6 +31,11 @@
 				</div>
 				<div class="product-info">
 					<div class="price">s./{{product.price}}</div>
+					<div class="users">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150/v1430433775/artjam_pokjgd.jpg">
+					</div>
 					<div class="like">
 						<span class="button-like {% if product.liked %}active{% endif %}"> <i class="fa fa-heart"></i><i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
 					</div>
