--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -29,7 +29,7 @@ work-width = 150px
 				margin auto
 				color white
 				border-radius 50%
-				padding 1em
+				padding .5rem
 				font-size 2em
 				cursor pointer
 				display flex
