--- a/public/stylus/add-work.styl
+++ b/public/stylus/add-work.styl
@@ -33,6 +33,20 @@
 .work-data
 	&__input
 		padding .5rem
+		.error-title
+		.error-description
+		.error-categorys
+		.error-tags
+		.error-public
+			color: #f54545;
+			// margin-top: -0.5rem;
+			font-weight: bold;
+			text-transform: uppercase;
+			font-family: 'Raleway';
+			font-size: 0.7rem;
+			padding: 0.25rem 0;
+			// display: none;
+			letter-spacing: 0.5px;
 		
 @media (min-width: desktop)
 	.work-data
