--- a/public/css/add-work.css
+++ b/public/css/add-work.css
@@ -705,6 +705,7 @@ body {
   font-family: 'Raleway';
   font-size: 0.7rem;
   padding: 0.25rem 0;
+  display: none;
   letter-spacing: 0.5px;
 }
 @media (min-width: 920px) {
