--- a/public/stylus/add-work.styl
+++ b/public/stylus/add-work.styl
@@ -45,7 +45,7 @@
 			font-family: 'Raleway';
 			font-size: 0.7rem;
 			padding: 0.25rem 0;
-			// display: none;
+			display: none;
 			letter-spacing: 0.5px;
 		
 @media (min-width: desktop)
