--- a/app/views/partials/users.html
+++ b/app/views/partials/users.html
@@ -23,6 +23,10 @@
 				<a class="work" href="{{ work.url }}" style="background-image: url('{{ work.photo }}');"></a>
 				{% endfor %}
 
+				{% set rowBlank = 6 - user.Works.length %}
+
+				{{rowBlank}}
+
 				{% if user.Works.length < 6 %}
 				<div class="work" style="background: #ccc; border: 1px solid white;"></div>
 				{% endif %}
