--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -12,7 +12,10 @@
 		box-shadow 0 0 8px rgba(82,168,236,0.6)
 	&[data-size='large']
 		font-size 1.15rem
-		
+
+.textarea
+	resize none
+	min-height 9rem
 
 /*------------------------------------*
 	$ SEARCH
