--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -5,7 +5,7 @@
 {% set css = 'account' %}
 
 {% block elements %}
-<form action="">
+<form class="account-data" action="">
     <div class="input-container">
         <label>username</label>
         <input class="input" type="text" placeholder="username"/>
@@ -20,15 +20,21 @@
     </div>
     <div class="input-container">
         <label>email</label>
-        <input class="input" type="text" placeholder="email"/>
+        <input class="input" type="email" placeholder="email"/>
     </div>
     <div class="input-container">
         <label>genero</label>
-        <input class="input" type="text" placeholder="genero"/>
+        <!-- <input class="input" type="text" placeholder="genero"/> -->
+        <select class="input" name="gender">
+            <option disabled {% if !profile.gender %}selected{% endif %}>Género</option>
+            <option value="Male" {% if profile.gender === 'male' %}selected{% endif %}>Masculino</option>
+            <option value="Female" {% if profile.gender === 'female' %}selected{% endif %}>Femenino</option>
+        </select>
     </div>
     <div class="input-container">
         <label>biografia</label>
-        <input class="input" type="text" placeholder="biografia"/>
+        <textarea class="input textarea" placeholder="biografia"></textarea>
+        <!-- <input class="input" type="text" placeholder="biografia"/> -->
     </div>
     <div class="input-container">
         <label>pais</label>
@@ -40,7 +46,7 @@
     </div>
     <div class="input-container">
         <label>cumpleahos</label>
-        <input class="input" type="text" placeholder="cumpleaños"/>
+        <input class="input" type="date" placeholder="cumpleaños"/>
     </div>
     <div class="input-container">
         <label>especialidades</label>
@@ -56,6 +62,9 @@
         <input class="input" type="text" placeholder="escuela"/>
     </div>
     {% endif %}
+
+    <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
+
 </form>
 
 {% endblock %}
@@ -66,14 +75,12 @@
     console.log('index!')
     var successMessage = {{ successMessage|json|safe }}
     console.log('successMessage: ', successMessage)
+
     var errorMessage = {{ errorMessage|json|safe }}
     console.log('errorMessage: ', errorMessage)
+    
+    var user = {{ user|json|safe }}
+    console.log('user: ', user)
 </script>
 
 {% endblock %}
-
-<!-- <form method="post">
-    <input type="password" name="password" placeholder="contraseña"/>
-    <input type="password" name="repassword" placeholder="recontraseña"/>
-    <input type="submit"/>
-</form> -->
