--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -1,24 +1,45 @@
 {% extends '../../partials/base.html' %}
 
-{% set path = 'index' %}
-{% set title = 'Arte Manifiesto' %}
-{% set css = 'index' %}
+{% set path = 'password' %}
+{% set title = 'Arte Manifiesto | Password' %}
+{% set css = 'account' %}
 
 {% block elements %}
-<form method="post">
-    <input type="password" name="password" placeholder="contraseña"/><br/>
-    <input type="password" name="repassword" placeholder="recontraseña"/><br/>
-    <input type="submit"/>
-</form>
+
+<section class="section-edit">
+    <div class="section-edit__title">
+        <p class="section-title-text">Cambiar Password</p>
+    </div>
+    <div class="section-edit__form">
+        <form class="form-container" action="post">
+            <div class="input-container">
+                <label>contraseña</label>
+                <input class="input" type="password" placeholder="contraseña"/>
+            </div>
+            <div class="input-container">
+                <label>repetir contraseña</label>
+                <input class="input" type="password" placeholder="repetir contraseña"/>
+            </div>
+            <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
+        </form>
+    </div>
+</section>
+
+
 {% endblock %}
 
 {% block scripts %}
+
 <script type="text/javascript">
-    console.log('index!')
-    var successMessage = {{ successMessage|json|safe }}
-    console.log('successMessage: ', successMessage)
-    var errorMessage = {{ errorMessage|json|safe }}
-    console.log('errorMessage: ', errorMessage)
+    // console.log('index!')
+    // var successMessage = {{ successMessage|json|safe }}
+    // console.log('successMessage: ', successMessage)
+
+    // var errorMessage = {{ errorMessage|json|safe }}
+    // console.log('errorMessage: ', errorMessage)
+    
+    // var user = {{ user|json|safe }}
+    // console.log('user: ', user)
 </script>
 
 {% endblock %}
