--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -17,6 +17,10 @@
 	resize none
 	min-height 9rem
 
+.input-radio
+	display flex
+	align-items center
+
 /*------------------------------------*
 	$ SEARCH
 *------------------------------------*/
@@ -61,3 +65,39 @@
 // @media (min-width: tablet-medium)
 // 	.search-options
 // 		max-width 400px
+
+/*------------------------------------*
+	$ FORM CONTAINER
+*------------------------------------*/
+.form-container
+	border solid 1px #ddd
+	box-shadow rgba(0,0,0,0.35) 0 0 10px
+	
+	.input-container
+		display flex
+		align-items center
+		padding 2rem 1rem
+		border-bottom solid 1px #ddd
+		label
+			color #585858
+			font-weight 600
+			font-size 0.85rem
+			letter-spacing 1px
+			font-family 'Raleway'
+			text-transform uppercase
+			min-width 10rem
+		.avatars
+			display flex
+			width 100%
+			justify-content space-around
+			.input-radio
+				margin-bottom .5rem
+			img
+				max-width 5rem
+				border-radius 50%
+				margin auto
+				display block
+			
+	.button-solid
+		margin 1.5rem auto
+		display table
