--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -33,6 +33,7 @@
 <script src="/js/vendor/hammer.min.js"></script>
 <script src="/js/vendor/underscore-min.js"></script>
 <script src="/js/vendor/salvattore.js"></script>
+<script src="/js/vendor/masonry.pkgd.min.js"></script>
 <script src="/js/app.min.js"></script>
 
 <script>
