antes de pulear

--- a/public/src/stylus/elements/buttons.styl
+++ b/public/src/stylus/elements/buttons.styl
@@ -38,6 +38,8 @@
 		
 	&[data-color='red']
 		background #f54545
+	&[data-color='gray']
+		background #cfcfcf
 		
 	&[data-expand='true']
 		display block
