--- a/app/views/user/account/websites.html
+++ b/app/views/user/account/websites.html
@@ -1,49 +1,61 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends '../../partials/base.html' %}
 
-<form action="/{{user.username}}/account/updateWebsites">
-    <div>
-        web :
-        <input name="web" type="text"/>
-    </div>
-    <div>
-        facebook :
-        <input name="facebook" type="text"/>
-    </div>
-    <div>
-        twitter :
-        <input name="twitter" type="text"/>
-    </div>
-    <div>
-        instagram :
-        <input name="instagram" type="text"/>
-    </div>
-    <div>
-        tumblr :
-        <input name="tumblr" type="text"/>
-    </div>
-    <div>
-        behance :
-        <input name="behance" type="text"/>
-    </div>
-    <input type="submit"/>
-</form>
+{% set path = 'websites' %}
+{% set title = 'Arte Manifiesto | Websites' %}
+{% set css = 'account' %}
 
-<script src='/js/vendor/jquery.min.js'></script>
-<script>
-    $(function () {
-        var websites = {{websites|json|safe}};
-        var i, website;
-        for (i = 0; i < websites.length; i++) {
-            website = websites[i];
-            $("input[name='" + website.name + "']").val(website.url);
-        }
-    })
+{% block elements %}
+
+<section class="section-edit">
+    <div class="section-edit__title">
+        <p class="section-title-text">Otros Sitios</p>
+    </div>
+    <div class="section-edit__form">
+        <form class="form-container" action="">
+            <div class="input-container">
+                <label>Web</label>
+                <input class="input" type="text" placeholder="web"/>
+            </div>
+            <div class="input-container">
+                <label>Facebook</label>
+                <input class="input" type="text" placeholder="facebook"/>
+            </div>
+            <div class="input-container">
+                <label>Twitter</label>
+                <input class="input" type="text" placeholder="twitter"/>
+            </div>
+            <div class="input-container">
+                <label>Instagram</label>
+                <input class="input" type="text" placeholder="instagram"/>
+            </div>
+            <div class="input-container">
+                <label>Tumblr</label>
+                <input class="input" type="text" placeholder="tumblr"/>
+            </div>
+            <div class="input-container">
+                <label>Behance</label>
+                <input class="input" type="text" placeholder="behance"/>
+            </div>
+            <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
+        </form>
+    </div>
+</section>
+
+
+{% endblock %}
+
+{% block scripts %}
+
+<script type="text/javascript">
+    console.log('index!')
+    var successMessage = {{ successMessage|json|safe }}
+    console.log('successMessage: ', successMessage)
+
+    var errorMessage = {{ errorMessage|json|safe }}
+    console.log('errorMessage: ', errorMessage)
+    
+    var user = {{ user|json|safe }}
+    console.log('user: ', user)
 </script>
-</body>
-</html>
+
+{% endblock %}
