--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -44,10 +44,6 @@
 		border solid 1px #ddd
 		color #333
 		margin auto
-		// position absolute
-		// background white
-		// z-index 1
-		// width 100%
 		&.visible
 			display block
 		.option
@@ -93,7 +89,7 @@
 			.input-radio
 				margin-bottom .5rem
 			img
-				max-width 5rem
+				max-width 6rem
 				border-radius 50%
 				margin auto
 				display block
@@ -101,3 +97,36 @@
 	.button-solid
 		margin 1.5rem auto
 		display table
+
+
+.shippinges-container
+	border solid 1px #ddd
+	box-shadow rgba(0,0,0,0.35) 0 0 10px
+.shippinges
+	display flex
+	flex-wrap wrap
+	.shipping
+		flex 1
+		max-width 50%
+		padding .5rem
+		&-inner
+			padding 1rem
+			background #e9f3f5
+			font-family 'Roboto Condensed'
+			box-shadow 1px 1px 0 #e7e7e7
+			letter-spacing .5px
+		&-title
+			font-size 1.15rem
+			padding-bottom .5rem
+		&-subtitle
+			font-weight 300
+			font-size .95rem
+		&-buttons
+			display flex
+			justify-content flex-end
+			button
+				&:not(:first-child)
+					background blue
+					margin-left .5rem
+
+// &:not(:first-child)
