--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -67,8 +67,10 @@
 *------------------------------------*/
 .form-container
 	border solid 1px #ddd
-	box-shadow rgba(0,0,0,0.35) 0 0 10px
-	
+	// box-shadow rgba(0,0,0,0.35) 0 0 10px
+	box-shadow 0 1px 2px 1px rgba(0,0,0,0.1)
+	border 1px solid #d8dae4
+  
 	.input-container
 		display flex
 		align-items center
