--- a/public/src/stylus/elements/menus.styl
+++ b/public/src/stylus/elements/menus.styl
@@ -95,3 +95,30 @@
 			margin-left .5rem
 		&:not(:last-child)
 			margin-right .5rem
+			
+
+/*------------------------------------*
+	$ ACCOUNT-MENU
+*------------------------------------*/
+.account-menu
+	position absolute
+	bottom 0
+	right 1rem
+	transform translate(0, 100%)
+	display flex
+	flex-direction column
+	background white
+	z-index 1
+	font-family 'Roboto Condensed'
+	font-weight 300
+	font-size .9rem
+	padding .5rem
+	letter-spacing 1px
+	border solid 1px #eee
+	&__item
+		color #333
+		padding .5rem
+		&:hover
+			background #eee
+		b
+			font-weight 400	
