--- a/public/css/account.css
+++ b/public/css/account.css
@@ -325,7 +325,7 @@ input[type="submit"] {
   padding: 0.5rem;
 }
 .account-menu__item:hover {
-  background: #eee;
+  color: #000;
 }
 .account-menu__item b {
   font-weight: 400;
@@ -849,13 +849,370 @@ body {
   background: #00f;
   margin-left: 0.5rem;
 }
-.section-edit {
-  max-width: 1100px;
+.section__title {
   margin: auto;
+  padding: 1rem;
+  text-align: center;
+  max-width: 1100px;
+}
+.section__navigation {
+  text-align: center;
+  display: none;
+}
+.section__navigation.visible {
+  display: block;
+}
+.section__filters {
+  margin: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -o-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  max-width: 1100px;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.section__filters .search {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 100%;
+  -ms-flex: 100%;
+  flex: 100%;
+  margin: 0.5rem 1rem;
+}
+.section__filters .button-filter {
+  margin: 0.5rem 1rem;
+}
+.section__workspace {
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  max-width: 1100px;
+}
+.section__workspace__filter {
+  z-index: 1;
+  margin: 1rem;
+  background: #fff;
+  position: absolute;
+  border: solid 1px #ddd;
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
+  -o-transition: -o-transform 0.5s;
+  -ms-transition: -ms-transform 0.5s;
+  transition: transform 0.5s;
+}
+.section__workspace__filter:nth-child(1) {
+  -webkit-transform: translate(-120%, 0);
+  -moz-transform: translate(-120%, 0);
+  -o-transform: translate(-120%, 0);
+  -ms-transform: translate(-120%, 0);
+  transform: translate(-120%, 0);
+}
+.section__workspace__filter:nth-child(1).visible {
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+}
+.section__workspace__filter:nth-child(2) {
+  -webkit-transform: translate(120%, 0);
+  -moz-transform: translate(120%, 0);
+  -o-transform: translate(120%, 0);
+  -ms-transform: translate(120%, 0);
+  transform: translate(120%, 0);
+  right: 0;
+}
+.section__workspace__filter:nth-child(2).visible {
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+}
+.section__workspace__elements {
+  min-height: 500px;
+}
+.section__workspace__elements .loading {
+  color: #aaa;
+  margin: 2rem;
+  display: none;
+  font-size: 1.75rem;
+  text-align: center;
+}
+.section__workspace__elements .loading.visible {
+  display: block;
+}
+.section__workspace__elements .loading .fa {
+  -webkit-animation: 1.5s circle infinite;
+  -moz-animation: 1.5s circle infinite;
+  -o-animation: 1.5s circle infinite;
+  -ms-animation: 1.5s circle infinite;
+  animation: 1.5s circle infinite;
+}
+.section__workspace__elements .empty-result {
+  display: none;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+.section__workspace__elements .empty-result.visible {
+  display: block;
+}
+.section__workspace__elements .empty-result a {
+  color: #333;
+  font-size: 1rem;
+  fon-weight: 600;
+}
+.section__workspace__elements .more {
+  margin: 2rem auto;
+  text-align: center;
+}
+.section__workspace__elements .more.hidden {
+  display: none;
+}
+@media (min-width: 1100px) {
+  .section__workspace__elements {
+    -webkit-transition: padding 0.5s;
+    -moz-transition: padding 0.5s;
+    -o-transition: padding 0.5s;
+    -ms-transition: padding 0.5s;
+    transition: padding 0.5s;
+  }
+  .section__workspace__elements.moveLeft {
+    padding-left: 10rem;
+  }
+  .section__workspace__elements.moveRight {
+    padding-right: 10rem;
+  }
+  .filter {
+    width: 9rem;
+  }
+}
+@media (min-width: 720px) {
+  .section__filters .button-filter:nth-child(2) {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -o-box-ordinal-group: 1;
+    -ms-flex-order: 1;
+    -webkit-order: 1;
+    order: 1;
+  }
+  .section__filters .search {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -o-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+  }
+  .section__filters .button-filter:nth-child(3) {
+    -webkit-box-ordinal-group: 3;
+    -moz-box-ordinal-group: 3;
+    -o-box-ordinal-group: 3;
+    -ms-flex-order: 3;
+    -webkit-order: 3;
+    order: 3;
+  }
+}
+@media (min-width: 720px) {
+  .section__filters .search {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.filter {
+  font-size: 0.85rem;
+  font-family: 'Raleway';
+}
+.filter__title {
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  border-bottom: solid 1px #ddd;
+  -webkit-box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  background-image: -webkit-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -moz-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -o-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -ms-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: linear-gradient(to bottom, #fff 0, #f6f6f6 100%);
+}
+.filter:not(:first-child) {
+  border-top: solid 1px #ddd;
+}
+.filter__item {
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  display: block;
+  color: #444;
+}
+.filter__item.selected {
+  background: #ededed;
+}
+.filter__price {
+  padding: 1rem 1rem 2rem 1rem;
+}
+.filter__fueatured {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 1rem 0.5rem;
+}
+@-moz-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@-webkit-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@-o-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
 }
 .section-edit__title {
   margin: 1rem;
 }
 .section-edit__form {
   margin: 1rem;
+}
+.account {
+  max-width: 1100px;
+  margin: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.account__menu .filter {
+  margin: 1rem;
+  border: solid 1px #ddd;
+  width: auto;
+}
+.account__data {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
