--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -135,6 +135,8 @@
 	&__item
 		cursor pointer
 		padding .5rem 1rem
+		display block
+		color #444
 		&.selected
 			background rgb(237, 237, 237)
 				
