--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -6,75 +6,7 @@
 
 {% block elements %}
 
-<section class="section-edit">
-    <div class="section-edit__title">
-        <p class="section-title-text">Edita tu perfil</p>
-    </div>
-    <div class="section-edit__form">
-        <form class="form-container" action="">
-            <div class="input-container">
-                <label>username</label>
-                <input class="input" type="text" placeholder="username"/>
-            </div>
-            <div class="input-container">
-                <label>nombres</label>
-                <input class="input" type="text" placeholder="nombres"/>
-            </div>
-            <div class="input-container">
-                <label>apellidos</label>
-                <input class="input" type="text" placeholder="apellidos"/>
-            </div>
-            <div class="input-container">
-                <label>email</label>
-                <input class="input" type="email" placeholder="email"/>
-            </div>
-            <div class="input-container">
-                <label>genero</label>
-                <!-- <input class="input" type="text" placeholder="genero"/> -->
-                <select class="input" name="gender">
-                    <option disabled {% if !profile.gender %}selected{% endif %}>Género</option>
-                    <option value="Male" {% if profile.gender === 'male' %}selected{% endif %}>Masculino</option>
-                    <option value="Female" {% if profile.gender === 'female' %}selected{% endif %}>Femenino</option>
-                </select>
-            </div>
-            <div class="input-container">
-                <label>biografia</label>
-                <textarea class="input textarea" placeholder="biografia"></textarea>
-                <!-- <input class="input" type="text" placeholder="biografia"/> -->
-            </div>
-            <div class="input-container">
-                <label>pais</label>
-                <input class="input" type="text" placeholder="pais"/>
-            </div>
-            <div class="input-container">
-                <label>ciudad</label>
-                <input class="input" type="text" placeholder="ciudad"/>
-            </div>
-            <div class="input-container">
-                <label>cumpleahos</label>
-                <input class="input" type="date" placeholder="cumpleaños"/>
-            </div>
-            <div class="input-container">
-                <label>especialidades</label>
-                <input class="input" type="text" placeholder="especialidades"/>
-            </div>
-            <div class="input-container">
-                <label>intereses</label>
-                <input class="input" type="text" placeholder="intereses"/>
-            </div>
-            {% if user.isArtist %}
-            <div class="input-container">
-                <label>escuela</label>
-                <input class="input" type="text" placeholder="escuela"/>
-            </div>
-            {% endif %}
-
-            <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
-
-        </form>
-    </div>
-</section>
-
+    {% include '../../partials/account.html' %}
 
 {% endblock %}
 
