--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -6,25 +6,7 @@
 
 {% block elements %}
 
-<section class="section-edit">
-    <div class="section-edit__title">
-        <p class="section-title-text">Cambiar Password</p>
-    </div>
-    <div class="section-edit__form">
-        <form class="form-container" action="post">
-            <div class="input-container">
-                <label>contraseña</label>
-                <input class="input" type="password" placeholder="contraseña"/>
-            </div>
-            <div class="input-container">
-                <label>repetir contraseña</label>
-                <input class="input" type="password" placeholder="repetir contraseña"/>
-            </div>
-            <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
-        </form>
-    </div>
-</section>
-
+    {% include '../../partials/account.html' %}
 
 {% endblock %}
 
