--- a/app/views/user/account/websites.html
+++ b/app/views/user/account/websites.html
@@ -6,41 +6,7 @@
 
 {% block elements %}
 
-<section class="section-edit">
-    <div class="section-edit__title">
-        <p class="section-title-text">Otros Sitios</p>
-    </div>
-    <div class="section-edit__form">
-        <form class="form-container" action="">
-            <div class="input-container">
-                <label>Web</label>
-                <input class="input" type="text" placeholder="web"/>
-            </div>
-            <div class="input-container">
-                <label>Facebook</label>
-                <input class="input" type="text" placeholder="facebook"/>
-            </div>
-            <div class="input-container">
-                <label>Twitter</label>
-                <input class="input" type="text" placeholder="twitter"/>
-            </div>
-            <div class="input-container">
-                <label>Instagram</label>
-                <input class="input" type="text" placeholder="instagram"/>
-            </div>
-            <div class="input-container">
-                <label>Tumblr</label>
-                <input class="input" type="text" placeholder="tumblr"/>
-            </div>
-            <div class="input-container">
-                <label>Behance</label>
-                <input class="input" type="text" placeholder="behance"/>
-            </div>
-            <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
-        </form>
-    </div>
-</section>
-
+    {% include '../../partials/account.html' %}
 
 {% endblock %}
 
