--- a/public/css/login.css
+++ b/public/css/login.css
@@ -325,7 +325,7 @@ input[type="submit"] {
   padding: 0.5rem;
 }
 .account-menu__item:hover {
-  background: #eee;
+  color: #000;
 }
 .account-menu__item b {
   font-weight: 400;
