new menu profile

--- a/app/views/partials/account.html
+++ b/app/views/partials/account.html
@@ -1,6 +1,6 @@
 <section class="account">
     <div class="account__menu">
-        <div class="filter">
+        <div class="filter solid">
             <div class="filter__title">Ajustes de Cuenta</div>
             <a href="/{{ user.username }}/account" class="filter__item">Perfil</a>
             <a href="/{{ user.username }}/account/photo" class="filter__item">Foto de Perfil</a>
