--- a/public/src/stylus/account.styl
+++ b/public/src/stylus/account.styl
@@ -20,7 +20,7 @@
 	margin auto
 	display flex
 	&__menu
-		// padding-top 4.15rem
+		padding-top 3.25rem
 		// padding-left 1rem
 		.filter
 			margin 1rem
