--- a/public/src/stylus/objects/section.styl
+++ b/public/src/stylus/objects/section.styl
@@ -146,3 +146,15 @@
 		display flex
 		align-items center
 		padding 1rem .5rem
+
+.filter.solid
+	font-family: 'Roboto Condensed';
+	letter-spacing: .5px;
+	background white
+	font-size .875rem
+	.filter__item
+		padding: 0.75rem 1rem;
+		color: #666;
+	.filter__title
+		font-weight: 500;
+		padding: 0.75rem 1rem;
