--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -515,6 +515,9 @@ body {
   -ms-flex: 1;
   flex: 1;
 }
+.main-wrapper__content.gray {
+  background: #f6f6f6;
+}
 /*------------------------------------*
 	$INT TO STRING
 *------------------------------------*/
