--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -515,6 +515,9 @@ body {
   -ms-flex: 1;
   flex: 1;
 }
+.main-wrapper__content.gray {
+  background: #f6f6f6;
+}
 .input {
   font-size: 1rem;
   padding: 0.5em;
@@ -597,6 +600,7 @@ body {
   -webkit-box-shadow: 0 1px 2px 1px rgba(0,0,0,0.1);
   box-shadow: 0 1px 2px 1px rgba(0,0,0,0.1);
   border: 1px solid #d8dae4;
+  background: #fff;
 }
 .form-container .input-container {
   display: -webkit-box;
