--- a/public/css/works.css
+++ b/public/css/works.css
@@ -515,6 +515,9 @@ body {
   -ms-flex: 1;
   flex: 1;
 }
+.main-wrapper__content.gray {
+  background: #f6f6f6;
+}
 /*------------------------------------*
 	$INT TO STRING
 *------------------------------------*/
@@ -600,6 +603,7 @@ body {
   -webkit-box-shadow: 0 1px 2px 1px rgba(0,0,0,0.1);
   box-shadow: 0 1px 2px 1px rgba(0,0,0,0.1);
   border: 1px solid #d8dae4;
+  background: #fff;
 }
 .form-container .input-container {
   display: -webkit-box;
@@ -1096,6 +1100,20 @@ body {
   -webkit-align-items: center;
   align-items: center;
   padding: 1rem 0.5rem;
+}
+.filter.solid {
+  font-family: 'Roboto Condensed';
+  letter-spacing: 0.5px;
+  background: #fff;
+  font-size: 0.875rem;
+}
+.filter.solid .filter__item {
+  padding: 0.75rem 1rem;
+  color: #666;
+}
+.filter.solid .filter__title {
+  font-weight: 500;
+  padding: 0.75rem 1rem;
 }
 @-moz-keyframes circle {
   0% {
