--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -70,6 +70,7 @@
 	// box-shadow rgba(0,0,0,0.35) 0 0 10px
 	box-shadow 0 1px 2px 1px rgba(0,0,0,0.1)
 	border 1px solid #d8dae4
+	background white
   
 	.input-container
 		display flex
